--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+  <div class="header">
+  <% if user_signed_in? %>
+    <%= link_to "Home", public_recipies_path %>
+    <%= link_to "My Foods", foods_path %>
+    <%= button_to "Log out", '/users/sign_out', method: :delete, data: { turbo: false } %>
+
+  <% else %>
+    <%= link_to "Sign up", new_user_registration_path %>
+     <%= link_to "Sign in", new_user_session_path %>
+  <% end %>
+  </div>
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
     <%= yield %>
