--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,21 +1,4 @@
 <h1>Foods here</h1>
 <%= link_to 'Add Food', '/foods/new'%>
 
-<table>
-<tr>
-<th>Food</th>
-<th>Measurement Unit</th>
-<th>Unit Price</th>
-<th>Actions</th>
-</tr>
-<tbody>
-<% @foods.each do |food|  %>
-<tr>
-<td><%= link_to "#{food.name}", food_path(food.id) %>(<%= food.quantity%>)</td>
-<td><%= food.measurement_unit%></td>
-<td><%= food.price%></td>
-<td><%= button_to "delete", food_path(food.id), method: :delete %></td>
-</tr>
-<% end %>
-<tbody>
-</table>
+<%= render '/shared/foods', foods: @foods%>
