--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <% if user_signed_in? %>
     <%= link_to "Home", public_recipies_path %>
     <%= link_to "My Foods", foods_path %>
+     <%= link_to "My Recipies", recipies_path %>
     <%= button_to "Log out", '/users/sign_out', method: :delete, data: { turbo: false } %>
 
   <% else %>
