--- a/app/views/recipies/show.html.erb
+++ b/app/views/recipies/show.html.erb
@@ -2,3 +2,5 @@
 <p>Preparation time: <%= @recipe.preparation_time%></p>
 <p>Cooking time: <%= @recipe.cooking_time%></p>
 <p>Description: <%= @recipe.description%></p>
+
+<%= render '/shared/foods', foods: @foods%>
