--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%= link_to "Home", public_recipies_path %>
     <%= link_to "My Foods", foods_path %>
      <%= link_to "My Recipies", recipies_path %>
+     <%= link_to "Generate Shopping List", shopping_list_path %>
     <%= button_to "Log out", '/users/sign_out', method: :delete, data: { turbo: false } %>
 
   <% else %>
