--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Foods here</h1>
-<%= link_to 'Add Food', '/foods/new'%>
+<div class='flex justify-end p-10'>
+<%= link_to 'Add Food', '/foods/new', class: 'border-2 border-black p-2' %>
+</div>
 
 <%= render '/shared/foods', foods: @foods%>
