--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,11 +1,15 @@
-<h1>new ingridient</h1>
-
 <%= form_with url: "/recipies/#{params[:recipy_id]}/recipe_foods", model: @recipe_foods, method: :post do |form| %>
+<div class="flex flex-col justify-center items-center gap-2 w-full h-full">
+<h1 class="text-3xl text-bold pt-6">New Form for Ingridient</h1>
+<div>
 <%= form.label :quantity %>
 <%= form.number_field :quantity %>
-<br>
+</div>
+<div>
 <%= form.label :food_id%>
 <%= form.select :food_id, Food.all.map {|f| [f.name, f.id]} %>
-<br>
-<%= form.submit 'Add' %>
-<% end %>
+</div>
+
+    <span class="border-2 border-black p-2"> <%= form.submit 'Add Ingridient' %></span>
+    <div>
+  <% end %>
