--- a/app/views/recipies/show.html.erb
+++ b/app/views/recipies/show.html.erb
@@ -1,8 +1,19 @@
-<h1><%= @recipe.name%></h1>
+
+<div class="flex flex-col justify-center items-center pt-9">
+<h1 class="text-3xl text-bold"><%= @recipe.name%></h1>
+<div class="flex flex-col w-1/2 gap-3 text-lg">
+<div class="flex justify-between">
 <p>Preparation time: <%= @recipe.preparation_time%></p>
+<div class="self-end">
+Public
+</div>
+</div>
 <p>Cooking time: <%= @recipe.cooking_time%></p>
-<p>Description: <%= @recipe.description%></p>
-
-<%= link_to 'Add ingridient', "/recipies/#{@recipe.id}/recipe_foods/new" %>
-
+<p><%= @recipe.description%></p>
+</div>
+<div class="flex justify-between w-1/2">
+<span class="border-2 border-black p-2 m-2"><%= link_to "Generate Shopping List", shopping_list_path %></span>
+<span class="border-2 border-black p-2 m-2"><%= link_to 'Add ingridient', "/recipies/#{@recipe.id}/recipe_foods/new" %></span>
+</div>
+</div>
 <%= render '/shared/foods', foods: @foods%>
