--- a/app/views/shared/_foods.html.erb
+++ b/app/views/shared/_foods.html.erb
@@ -1,18 +1,20 @@
-<table>
-<tr>
-<th>Food</th>
-<th>Measurement Unit</th>
-<th>Unit Price</th>
-<th>Actions</th>
-</tr>
-<tbody>
-<% @foods.each do |food|  %>
-<tr>
-<td><%= link_to "#{food.name}", food_path(food.id) %>(<%= food.quantity%>)</td>
-<td><%= food.measurement_unit%></td>
-<td><%= food.price%></td>
-<td><%= button_to "delete", food_path(food.id), method: :delete %></td>
-</tr>
-<% end %>
-<tbody>
+<table class="table-auto w-full max-w-xl mx-auto text-left mb-10 text-lg">
+  <thead class="bg-gray-400">
+    <tr class="h-10">
+      <th class="p-4">Food</th>
+      <th class="p-4">Measurement Unit</th>
+      <th class="p-4">Unit Price</th>
+      <th class="p-4">Actions</th>
+    </tr>
+  </thead>
+  <tbody class="bg-gray-300 p-20">
+    <% @foods.each do |food|  %>
+      <tr class="h-16">
+        <td class="p-4"><%= link_to "#{food.name}", food_path(food.id) %>(<%= food.quantity%>)</td>
+        <td class="p-4"><%= food.measurement_unit%></td>
+        <td class="p-4">$<%= food.price%></td>
+        <td class="p-4"><%= button_to "delete", food_path(food.id), method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
