--- a/app/views/shopping_list/index.html.erb
+++ b/app/views/shopping_list/index.html.erb
@@ -1,32 +1,29 @@
-<h1>Generated List</h1>
-
-<% if @recipe_foods.length > 0 %>
-<h2>Amount of food items to buy: <%= @recipe_foods.length%></h2>
-
- <% total = 0 %>
- <% @recipe_foods.each do |food| %>
- <% total += food.food.price %>
- <% end %>
-<p>Total value of food needed: $<%= total %> </p>
-
-<table>
-<tr>
-<th>Food</th>
-<th>Quantity</th>
-<th> Price</th>
-</tr>
-<tbody>
-<% @recipe_foods.each do |recipe|  %>
-<tr>
-<td><%= link_to "#{recipe.food.name}", food_path(recipe.food.id) %>(<%= recipe.food.quantity%>)</td>
-<td><%= recipe.quantity%></td>
-<td><%= recipe.food.price%></td>
-</tr>
-<% end %>
-<tbody>
+<h1 class="font-bold text-4xl mb-10 text-center">Shopping List for <%= current_user.name %></h1>
+<div class="mb-10 text-center">
+  <span class="text-2xl">
+    Amount of food items to buy: <span class="font-bold"><%= @recipe_foods.length %></span>
+  </span>
+  <span class="text-2xl">
+    Total value of food needed: <span class="font-bold">$<%= @recipe_foods.map {|r| r.food.price.to_i * r.quantity.to_i }.sum %></span>
+  </span>
+</div>
+<table class="table-auto w-full max-w-xl mx-auto text-left mb-10 text-lg">
+  <thead class="bg-gray-400">
+    <tr class="h-10">
+      <th class="p-4">Food</th>
+      <th class="p-4">Quantity</th>
+      <th class="p-4">Price</th>
+      <th class="p-4">Amount</th>
+    </tr>
+  </thead>
+  <tbody class="bg-gray-300 p-20">
+    <% @recipe_foods.each do |r|%>
+      <tr class="h-16">
+        <td class="p-4"><%= r.food.name %></td>
+        <td class="p-4"><%= r.quantity %> <%= r.food.measurement_unit %></td>
+        <td class="p-4">$<%= r.food.price %></td>
+        <td class="p-4">$<%= r.food.price.to_i * r.quantity.to_i %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<% else %>
-<h1>No shoping needed</h1>
-<% end %>
-
