--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,13 @@
-<h2>Sign up</h2>
 
+<h2 class="text-center">Sign up</h2>
+<div class="flex justify-center items-center">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -21,9 +27,14 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="text-center  mt-6">
+   <span class="border-2 border-black p-2"> <%= f.submit "Sign up" %></span>
   </div>
 <% end %>
+</div>
+<div class="text-center  mt-6">
+<span class="border-2 border-black p-2"><%= render "devise/shared/links" %>
+</span>
+</div>
 
-<%= render "devise/shared/links" %>
+
