--- a/app/views/shared/_foods.html.erb
+++ b/app/views/shared/_foods.html.erb
@@ -10,10 +10,10 @@
   <tbody class="bg-gray-300 p-20">
     <% @foods.each do |food|  %>
       <tr class="h-16">
-        <td class="p-4"><%= link_to "#{food.name}", food_path(food.id) %>(<%= food.quantity%>)</td>
+        <td class="p-4 text-blue-400 underline"><%= link_to "#{food.name}", food_path(food.id) %>(<%= food.quantity%>)</td>
         <td class="p-4"><%= food.measurement_unit%></td>
         <td class="p-4">$<%= food.price%></td>
-        <td class="p-4"><%= button_to "delete", food_path(food.id), method: :delete %></td>
+        <td class="p-4"><%= button_to "delete", food_path(food.id), method: :delete, class: 'text-red-400 underline hover:pointer-cursor' %></td>
       </tr>
     <% end %>
   </tbody>
